# kdtrace

./: .gitignore  README.md  crawl.py  del_wrong.py  fetch.py  filter.py  gen_html.py  gen_list.py  indicator.py  main.py  pip.sh  pyproject.toml  rate.py  requirements.txt  util.py
KI/: arch.md  todo.md
data/: index
src/: crawl.py  del_wrong.py  fetch.py  filter.py  gen_html.py  gen_list.py  indicator.py  main.py  rate.py
src/utils/: __init__.py  logger.py
tests/: test_crawl_and_html.py  test_fetch_params.py  test_indicator_and_fetch_validation.py  test_main_smoke.py  test_utils.py
utils/: http.py  stocks.py
